# test-actix

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  drill.yml  projects.json.dist
.github/workflows/: rust.yml
migrations/2020-09-30-212549_create_users/: up.sql
migrations/2020-10-05-203728_add_email_password_users/: down.sql  up.sql
src/: config.rs  errors.rs  handlers.rs  lib.rs  logger.rs  main.rs  models.rs  routes.rs  setting.rs  ws.rs
src/db/: mod.rs  models.rs  schema.rs
src/handlers/: errors.rs  mod.rs  releases.rs  users.rs  ws.rs
src/middlewares/: auth.rs  mod.rs  timer.rs
src/models/: auth.rs  mod.rs  release.rs  user.rs
static/: index.html
static/js/: github.js
templates/: github.html  hello.html
tests/: handlers_test.rs
