[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "Actix-web test"
edition = "2018"
name = "test_actix"
readme = "README.md"
repository = "https://github.com/fabienbellanger/test-actix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "test_actix"
path = "src/main.rs"

[dependencies]
actix = "0.10.0"
actix-cors = "0.3.0"
actix-files = "0.5.0"
actix-http = "2"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = "3"
actix-web-actors = "3"
askama_actix = "0.11.1"
bytes = "0.5.6"
chrono = "0.4.19"
color-eyre = "0.5.10"
config = "0.10"
derive_more = "0.99.11"
diesel_migrations = "1.4.0"
dotenv = "0.15"
env_logger = "0.7"
eyre = "0.6.3"
futures = "0.3"
jsonwebtoken = "7.2.0"
log = "0.4.11"
reqwest = "0.10.8"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = {version = "0.1", features = ["env_logger"]}
tracing-subscriber = {version = "0.2", features = ["fmt"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-web-prom = "0.5"

[dependencies.askama]
features = ["with-actix-web", "serde-json"]
version = "0.10"

[dependencies.diesel]
default-features = false
features = ["r2d2", "mysql"]
version = "1.4.4"
